[project]
name = "rulebook_benchmark"
version = "0.1.0"
description = "A library for rulebook-based benchmarking using Scenic."

readme = "README.md"
requires-python = ">=3.8"


dependencies = [
	"numpy >= 1.21",
	"scipy ~= 1.7",
	"dotmap ~= 1.3",
	"metric-temporal-logic >= 0.1.5",
	"matplotlib ~= 3.2",
	"easydict ~= 1.9",
	"joblib ~= 1.2",
	"dill >= 0.3.1",
	"future >= 0.18.3",
	"pandas >= 1.3, <3",
	"scikit-learn ~= 1.0",
	"pygame ~= 2.1",
	"kmodes <= 0.10.2",
	"scenic ~= 3.1.0a1, <4",
	"progressbar2 ~= 3.53",
	"networkx >= 2.6",
	"statsmodels >= 0.13.2",
	'carla >= 0.9.12; python_version <= "3.10" and (platform_system == "Linux" or platform_system == "Windows")',
]

